# backend/models/schoolAdminModel.js
@@ -1,11 +1,35 @@
 const db = require('../config/db');
 
 const SchoolAdminModel = {
+    // add new department
+    addDepartment: async (schoolId, deptName) => {
+        await db.query('CALL sp_AddDepartment(?,?)', [schoolId, deptName]);
+        return true;
+    },
+
+    // list departments
+    getSchoolDepartments: async (schoolId) => {
+        const [rows] = await db.query('CALL sp_GetSchoolDepartments(?)', [schoolId]);
+        return rows[0] || [];
+    },
+
+    // update department
+    updateDepartment: async (schoolId, departmentId, deptName) => {
+        await db.query('CALL sp_UpdateDepartment(?,?,?)', [schoolId, departmentId, deptName]);
+        return true;
+    },
+
+    // remove department
+    removeDepartment: async (schoolId, departmentId) => {
+        await db.query('CALL sp_RemoveDepartment(?,?)', [schoolId, departmentId]);
+        return true;
+    },
+
     // to add staff member
-    addStaffMember: async (schoolId, roleId, name, email, department) => {
+    addStaffMember: async (schoolId, roleId, departmentId, name, email) => {
         await db.query(
             'CALL sp_AddStaffMember(?,?,?,?,?)',
-            [schoolId, roleId, name, email, department]
+            [schoolId, roleId, departmentId, name, email,]
         );
         return true;
     },
@@ -17,10 +41,10 @@ const SchoolAdminModel = {
     },
 
     // update staff member
-    updateStaffMember: async (schoolId, staffId, roleId, name, email, department) => {
+    updateStaffMember: async (schoolId, staffId, roleId, departmentId, name, email) => {
         await db.query(
             'CALL sp_UpdateStaffMember(?,?,?,?,?,?)',
-            [schoolId, staffId, roleId, name, email, department]
+            [schoolId, staffId, roleId, departmentId, name, email]
         );
         return true;
     },
@@ -32,26 +56,26 @@ const SchoolAdminModel = {
     },
 
     // add staff salary
-    addSalary: async (schoolId,staffId,baseSalary) => {
-        await db.query('CALL sp_AddStaffSalary(?,?,?)',[schoolId,staffId,baseSalary])
+    addSalary: async (schoolId, staffId, baseSalary) => {
+        await db.query('CALL sp_AddStaffSalary(?,?,?)', [schoolId, staffId, baseSalary])
         return true;
     },
 
     // update staff salary
-    updateSalary: async (schoolId,staffId,baseSalary) => {
-        await db.query('CALL sp_UpdateStaffSalary(?,?,?)',[schoolId,staffId,baseSalary])
+    updateSalary: async (schoolId, staffId, baseSalary) => {
+        await db.query('CALL sp_UpdateStaffSalary(?,?,?)', [schoolId, staffId, baseSalary])
         return true;
     },
 
     // remove staff salary
-    removeSalary: async(schoolId,staffId) => {
-        await db.query('CALL sp_RemoveStaffSalary(?,?)',[schoolId,staffId])
+    removeSalary: async (schoolId, staffId) => {
+        await db.query('CALL sp_RemoveStaffSalary(?,?)', [schoolId, staffId])
         return true;
     },
 
     // get school salries details
     getSalariesReport: async (schoolId) => {
-        const [rows] = await db.query('CALL sp_GetSchoolSalaries(?)',[schoolId])
+        const [rows] = await db.query('CALL sp_GetSchoolSalaries(?)', [schoolId])
         return rows[0] || [];
     }
 
